<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart.Cart"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="130dp"
        android:layout_marginTop="30dp"
        android:layout_height="60dp"
        app:cardCornerRadius="30dp"
        android:id="@+id/card"
        >

        <TextView
            android:id="@+id/Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rounded"
            android:textColor="@color/light_orange"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/name"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/orange"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/rounded"
            android:text="@string/name" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:fontFamily="@font/rounded"
            app:layout_constraintStart_toEndOf="@id/Quantity"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintEnd_toStartOf="@id/btn_checkout"
        tools:listitem="@layout/activity_cart_itemm"
        tools:itemCount="3"
        />

    <Button
        android:id="@+id/btn_checkout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/rounded"
        android:text="@string/check_out"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_cart" />

    <TextView
        android:id="@+id/Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_checkout"
        android:fontFamily="@font/rounded"
        android:text="Total: 200$"
        />

</androidx.constraintlayout.widget.ConstraintLayout>